updated launch config for german league replicas